# DSO

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: option_greeks.cpp
experiments/: calibration.cpp  hedging_benchmark.cpp  hedging_wrong_model.cpp  heston_hedging_recurrent.cpp  option_greeks.cpp
experiments/barrier_hedging/: config.hpp  eval.hpp  eval_metrics.hpp  expected_payoff.hpp  experiment_context.hpp  feature_extractors.hpp  logged_hedging_engine.hpp  logging.hpp  main.cpp  risk_factory.hpp  runner.hpp  train.hpp
experiments/calibration/: main.cpp
experiments/gpu/: main.cpp
experiments/greeks/: main.cpp
experiments/heston/: config.hpp  evaluation.hpp  feature_extractors.hpp  linreg_benchmark.hpp  main.cpp  risk_factory.hpp  training.hpp
experiments/model_risk/: main.cpp
scripts/: run.ps1  run_barrier.ps1
src/: dso.cpp  dso.hpp  main.cpp
src/control/: controller.hpp  linear_controller.hpp  linear_hedge_controller.hpp  mlp_controller.hpp  nonlinear_controller.hpp
src/core/: differentiable_objective.hpp  perf.hpp  stochastic_program.hpp  threading.hpp  time_grid.hpp
src/features/: factor.hpp  feature_extractor.hpp  option_features.hpp
src/hedging/: hedging.hpp
src/models/: black_scholes.hpp  heston.hpp  stochastic_model.hpp
src/objectives/: mc_calibration_objective.hpp  mc_hedge_objective.hpp  mc_price_objective.hpp
src/products/: asian_option.hpp  barrier_option.hpp  european_option.hpp  lookback_option.hpp  product.hpp
src/risk/: cvar.hpp  entropic_risk.hpp  mean_squared_error.hpp  mean_variance.hpp  risk_measure.hpp
src/simulation/: monte_carlo.hpp  pcg32.hpp  rng_stream.hpp  simulation_result.hpp
src/trainers/: adam_wrapper.hpp  lbfgs_wrapper.hpp  mc_gradients.hpp  optimiser.hpp
src/valuation/: mc_valuation.hpp
